clusters/lab-001/imdb/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: imdb
  namespace: imdb
  labels:
    app.kubernetes.io/name: imdb
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
       maxSurge: 1
       maxUnavailable: 1
  selector:
    matchLabels:
      app: imdb
  template:
    metadata:
      labels:
        app: imdb
    spec:
      containers:
        - name: app
          image: ghcr.io/cse-labs/imdb:1.0.0
          imagePullPolicy: Always
          args:
            - --in-memory
            - --region
            - central
            - --zone
            - tx
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 5
            failureThreshold: 10
            periodSeconds: 60
          readinessProbe:
            httpGet:
              path: /readyz
              port: http
            initialDelaySeconds: 5
            failureThreshold: 10
            periodSeconds: 5
          resources:
            limits:
              cpu: 1000m
              memory: 2048Mi
            requests:
              cpu: 500m
              memory: 1024Mi
